// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Iframe className="my-classname" 1`] = `
<div
  className="uu5-bricks-iframe my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe controlled=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe controlled=true 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe default props 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe disabled=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe disabled=true 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Iframe docKit examples UU5.Bricks.Iframe example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="s6"
    id="uuID2"
    key="uuID2"
  >
    <Iframe
      id="uuID3"
    />
  </Column>
  <Column
    colWidth="s6"
    id="uuID4"
    key="uuID4"
  >
    <Iframe
      id="uuID5"
      src="https://plus4u.net"
    />
  </Column>
</div>
`;

exports[`UU5.Bricks.Iframe height="40em" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "40em",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe height="400" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "400px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe hidden=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe hidden=true 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe id="myId" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="myId"
  style={Object {}}
  title={null}
>
  <iframe
    id="myId-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe iframeAttrs={"name":"reactName"} 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    name="reactName"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe inline=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe inline=true 1`] = `
<div
  className="uu5-bricks-iframe uu5-bricks-iframe-inline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe name="myName" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="inline" 1`] = `
<Link
  target="_blank"
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe nestingLevel="smallBox" 1`] = `
<Link
  target="_blank"
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel="smallBoxCollection" 1`] = `
<Link
  target="_blank"
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe noIndex=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe noIndex=true 1`] = `
<div
  className="uu5-bricks-iframe uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe pureRender=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe pureRender=true 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe resize=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe resize=true 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Loading />
  <iframe
    id="uuID-iframe"
    onLoad={[Function]}
    style={Object {}}
  />
</div>
`;

exports[`UU5.Bricks.Iframe selected=false 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe selected=true 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe src="https://plus4u.net/" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <iframe
    id="uuID-iframe"
    src="https://plus4u.net/"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.Iframe syncTimeout=3 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <iframe
    id="uuID-iframe"
    style={
      Object {
        "height": "250px",
      }
    }
  />
</div>
`;
